# gmail-inbox-zero-tool

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
credentials/: README.md
src/gmail_manager/: __init__.py  auth.py  config.py  filters.py  gui.py  labels.py  main.py  messages.py  search.py  service.py  trash.py
tests/: check_ollama.py
